avoid layout problem during loading
git-svn-id: http://svn.kcn.cn/repos/kbs/trunk@8484 de4889a5-8ad4-4bf3-bd87-57997c21d515

--- a/www2/images/0/www2-default.css
+++ b/www2/images/0/www2-default.css
@@ -138,6 +138,7 @@ fieldset legend {
 .flimg {
 	float: left;
 	width: 72px; /* IE5 for Mac workaround */
+	height: 21px;
 	margin: 0 0.5em 0 0;
 }
 .clear {
