--- a/www2/images/1/www2-default.css
+++ b/www2/images/1/www2-default.css
@@ -138,6 +138,7 @@ fieldset legend {
 .flimg {
 	float: left;
 	width: 87px; /* IE5 for Mac workaround */
+	height: 27px;
 	margin: 0 0.5em 0 0;
 }
 .clear {
